# pg_enhanced_query_logging

./: .gitignore  LICENSE  Makefile  README.md  meson.build  pg_enhanced_query_logging--1.0--1.1.sql  pg_enhanced_query_logging--1.0.sql  pg_enhanced_query_logging--1.1--1.2.sql  pg_enhanced_query_logging--1.1.sql  pg_enhanced_query_logging--1.2--1.3.sql  pg_enhanced_query_logging--1.2.sql  pg_enhanced_query_logging--1.3.sql  pg_enhanced_query_logging.c  pg_enhanced_query_logging.conf  pg_enhanced_query_logging.control
bugs_and_improvements/: 01_bug_plan_time_leaks_to_next_query.md  02_bug_explain_output_breaks_pt_query_digest.md  03_bug_unescaped_parameter_values.md  04_bug_nesting_level_conflation_in_planner_hook.md  05_bug_timestamp_format_truncates_on_32bit.md  06_improvement_zu_format_portability.md  07_improvement_fragile_microsecond_extraction.md  08_improvement_detect_fwrite_short_writes.md  09_improvement_deduplicate_header_formatting.md  10_improvement_add_pg_fini_for_clean_unload.md  11_improvement_add_last_errno_and_killed_fields.md  12_improvement_add_bytes_sent_field.md  13_bug_executor_end_ordering_explain_after_cleanup.md  14_bug_fetch_search_path_unsafe_in_executor_end.md  15_bug_allocatefile_outside_resource_owner.md  16_bug_rows_examined_double_counts_non_scan_nodes.md  17_bug_session_rate_limit_not_recalculated_on_guc_change.md  18_bug_memory_leak_stringinfo_on_error.md  19_bug_param_access_bypasses_paramfetch_hook.md  20_bug_buffer_wal_metrics_are_totals_not_deltas.md  21_bug_log_min_duration_guc_unit_comparison_mismatch.md  22_bug_process_utility_uninitialized_start_on_error_path.md  23_bug_log_filename_allows_directory_traversal.md  24_bug_cursor_and_spi_queries_double_counted.md  (+32 more)
doc/: testing.md  (+9 more)
(+28 files in other folders)
